some execution-spec-tests pass
Signed-off-by: Danno Ferrin <danno.ferrin@swirldslabs.com>